fix: fixing extra margin in carousel

--- a/assets/css/carousel/carousel.css
+++ b/assets/css/carousel/carousel.css
@@ -120,13 +120,6 @@ input{
 }
 
 @media screen and (max-width: 850px) {
-    .picker-feature-explanation{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-     
     .book-container{
         display: flex;
         justify-content: center;
@@ -140,6 +133,7 @@ input{
         width: 100%;
         display: flex;
         justify-content: center;
+        height: 80vw;
     }
     
     .cards label{
